--- a/xem-phim-bo/thieu-nien-bach-ma-tuy-xuan-phong/index.html
+++ b/xem-phim-bo/thieu-nien-bach-ma-tuy-xuan-phong/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1655,18 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dich-nhan-kiet-thien-linh-tien-tu" title="Địch Nhân Kiệt : Thiên Linh Tiên Tử">
+          <a class="list-top-movie-link" href="/phim-moi/chang-trai-choi-ca-the-gioi" title="Chàng Trai Chọi Cả Thế Giới">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dich-nhan-kiet-thien-linh-tien-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chang-trai-choi-ca-the-gioi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Địch Nhân Kiệt : Thiên Linh Tiên Tử
+             Chàng Trai Chọi Cả Thế Giới
             </span>
             <span class="list-top-movie-item-en">
-             Di Ren Jie: Zhi Fei Tou Luo Cha
+             Boy Kills World
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1677,21 +1677,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-than" title="Thế Thân">
+          <a class="list-top-movie-link" href="/phim-moi/tuan-lenh-thua-ba-co" title="Tuân lệnh! Thưa bà cô">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-than-2013-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuan-lenh-thua-ba-co-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thế Thân
+             Tuân lệnh! Thưa bà cô
             </span>
             <span class="list-top-movie-item-en">
-             Tumbleweed
+             Yes, My Lady!
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1699,18 +1699,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chu-nha-than-tham" title="Chủ nhà thần thám">
+          <a class="list-top-movie-link" href="/phim-moi/the-painter-and-the-thief" title="The Painter and the Thief">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-nha-than-tham-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-painter-and-the-thief-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chủ nhà thần thám
+             The Painter and the Thief
             </span>
             <span class="list-top-movie-item-en">
-             神探房东
+             The Painter and the Thief
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1721,21 +1721,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phan-xet-cuoi-cung" title="Phán Xét Cuối Cùng">
+          <a class="list-top-movie-link" href="/phim-moi/ma-nu-dai-chien" title="Ma Nữ Đại Chiến">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phan-xet-cuoi-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-nu-dai-chien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phán Xét Cuối Cùng
+             Ma Nữ Đại Chiến
             </span>
             <span class="list-top-movie-item-en">
-             Final Justice
+             Sadako vs. Kayako
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1743,21 +1743,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tro-choi-goi-hon" title="Trò chơi gọi hồn">
+          <a class="list-top-movie-link" href="/phim-moi/hoc-vien-umbrella-phan-4" title="Học Viện Umbrella (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-choi-goi-hon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoc-vien-umbrella-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trò chơi gọi hồn
+             Học Viện Umbrella (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Ouija
+             The Umbrella Academy (Season 4)
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             8 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
