add new website from server na

--- a/xem-phim-bo/quyen-tu-luong/index.html
+++ b/xem-phim-bo/quyen-tu-luong/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1663,40 +1663,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xoay-quanh" title="Xoay quanh">
+          <a class="list-top-movie-link" href="/phim-moi/luat-quy" title="Luật Quỷ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xoay-quanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luat-quy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xoay quanh
+             Luật Quỷ
             </span>
             <span class="list-top-movie-item-en">
-             Turned Around
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/am-muu-my-an-mang-bach-tuoc" title="Âm mưu Mỹ: Án mạng Bạch tuộc">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-muu-my-an-mang-bach-tuoc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Âm mưu Mỹ: Án mạng Bạch tuộc
-            </span>
-            <span class="list-top-movie-item-en">
-             American Conspiracy: The Octopus Murders
+             The Lodgers
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1707,21 +1685,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vua-ho-phan-1" title="Vua hổ (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/thien-nga-bong-dem" title="Thiên Nga Bóng Đêm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-ho-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/eve-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vua hổ (Phần 1)
+             Thiên Nga Bóng Đêm
             </span>
             <span class="list-top-movie-item-en">
-             Tiger King (Season 1)
+             Eve
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1729,18 +1707,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bao-thu-phuc-thu" title="Báo Thù – Phục Thù">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-quai-sieu-cap-ngay-hoi-quai-vat" title="Hội Quái Siêu Cấp: Ngày hội quái vật">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-thu-phuc-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-quai-sieu-cap-ngay-hoi-quai-vat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Báo Thù – Phục Thù
+             Hội Quái Siêu Cấp: Ngày hội quái vật
             </span>
             <span class="list-top-movie-item-en">
-             Vengeance - Revenge
+             Super Monsters: Dia de los Monsters
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1751,21 +1729,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-gioi-dien-cuong" title="Thế giới điên cuồng">
+          <a class="list-top-movie-link" href="/phim-moi/eiffel" title="Eiffel">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-dien-cuong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/eiffel-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thế giới điên cuồng
+             Eiffel
             </span>
             <span class="list-top-movie-item-en">
-             It's a Mad, Mad, Mad World
+             Eiffel
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/the-soong-sisters" title="The Soong Sisters">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-soong-sisters-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             The Soong Sisters
+            </span>
+            <span class="list-top-movie-item-en">
+             The Soong Sisters
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
